fix: enum movement type
